# phost

./: .dockerignore  .gitignore  Dockerfile  Justfile  README.md
client/: .gitignore  Cargo.toml  develop.sh  requirements.txt  run.sh  setup.py
client/.pytest_cache/v/cache/: nodeids
client/phost/: __main__.py  config.py  upload.py  util.py
client/phost-cli/: __main__.py  config.py
client/src/: main.rs
proxy/: Cargo.toml  rustfmt.toml
proxy/src/: conf.rs  main.rs  models.rs  schema.rs
server/: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Justfile  apache-config-inner.conf  apache-config-outer.conf  apache-vhost.conf  nginx-config-outer.conf  renew-cert.sh  requirements.txt
server/migrations/2018-09-09-233641_initialize/: down.sql  up.sql
server/server/: settings.py  urls.py  wsgi.py
server/serversite/: admin.py  apps.py  forms.py  models.py  proxy.py  serialize.py  tests.py  upload.py  urls.py  validation.py  views.py
server/serversite/migrations/: 0001_initial.py  0002_auto_20180911_0341.py  0003_auto_20180919_1143.py  0004_staticdeployment_not_found_document.py  0005_proxydeployment.py
server/src/: config.rs  db.rs  main.rs  routes.rs  schema.rs  upload.rs  util.rs
server/src/models/: internal.rs  mod.rs
