[package]
name = "phost-proxy"
version = "0.1.0"
authors = ["Casey Primozic <me@ameo.link>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper-reverse-proxy = "0.4.0"
hyper = "0.12"
futures = "0.1"

diesel = { version = "1.4.2", features = ["chrono", "mysql", "r2d2"] }

dotenv = "0.14.0"

lazy_static = "1.3.0"

serde_json = "1.0.39"
serde = "1.0.90"
serde_derive = "1.0.90"
log = "0.4.6"
chrono = { version="0.4.6", features=["serde"] }
uuid = { version="0.7.4", features=["v4", "serde"] }
regex = "1.1.7"
