[package]
authors = ["Casey Primozic <me@ameo.link>"]
name = "project-hoster-server"
version = "0.1.0"

[dependencies]
actix = "0.7"
actix-web = "0.7"
diesel = { version = "1.3.2", features = ["mysql", "r2d2"] }
dotenv = "0.13.0"
r2d2 = "0.8.2"
structopt = "0.2"
serde = "1.0.78"
serde_json = "1.0.27"
serde_derive = "1.0.78"
futures = "0.1.24"
lazy_static = "1.1.0"
log = "0.4.5"
tempfile = "3.0.3"
tokio-fs = "0.1.3"
uuid = { version = "0.7.0", features = ["v4"] }
tokio-process = "0.2.2"
